--- a/index.html
+++ b/index.html
@@ -13,31 +13,44 @@
 
 <body>
   <main>
-
     <section class="content">
       <h1 class="sr-only">content</h1>
       <form action="" class="content__search">
         <span class="content__box-icon"><img src="./src/img/search.svg" alt=""></span>
-        <input class="search" type="search" placeholder="Digite o nome do produto..." required>
+        <input class="search font-1" type="search" placeholder="Digite o nome do produto..." required>
         <!-- <span class="content__results">No results</span> -->
         <div class="button__box">
-          <button type="submit" class="btn">Pesquisar</button>
+          <button type="submit" class="btn font-2">Pesquisar</button>
         </div>
       </form>
 
       <div class="content__option-box container">
-        <select name="option" id="option-select" class="content__option">
-          <option class="optionSelecting" value="todos" selected>Todos</option>
-          <option value="promocao" class="optionSelecting">Promoção</option>
-          <option value="exclusivo" class="optionSelecting">Exclusivo</option>
+        <select name="option" id="option-select" class="content__option font-2">
+          <option class="optionSelecting font-2" value="todos" selected>Todos</option>
+          <option value="promocao" class="optionSelecting font-2">Promoção</option>
+          <option value="exclusivo" class="optionSelecting font-2">Exclusivo</option>
         </select>
 
       </div>
 
       <section class="content__product container">
         <h2 class="sr-only">produtos</h2>
-        <!-- 
-        <a href="" class="content__product-link">
+        <!-- <div class="error">
+          <div>
+            <svg>
+              <use href="src/img/icons.svg#icon-alert-triangle"></use>
+            </svg>
+          </div>
+          <p>Nenhum produto encontrado.
+          </p>
+        </div> -->
+        <!-- <div class="spinner">
+          <svg>
+            <use href="src/img/icons.svg#icon-loader"></use>
+          </svg>
+        </div> -->
+
+        <!-- <a href="" class="content__product-link">
           <article class="content__product-box">
             <div class="content__box-img">
               <img class="content__img" src="src/img/produtos/prod1.jpg" alt="">
@@ -59,6 +72,7 @@
                 d="M21 8.25c0-2.485-2.099-4.5-4.688-4.5-1.935 0-3.597 1.126-4.312 2.733-.715-1.607-2.377-2.733-4.313-2.733C5.1 3.75 3 5.765 3 8.25c0 7.22 9 12 9 12s9-4.78 9-12z" />
             </svg>
           </button>
+
         </a>
 
 
@@ -213,8 +227,11 @@
       </section>
 
     </section>
-
-
+    <!-- <div class="spinner">
+      <svg>
+        <use href="src/img/icons.svg#icon-loader"></use>
+      </svg>
+    </div> -->
   </main>
 </body>
 
