--- a/produto.html
+++ b/produto.html
@@ -16,6 +16,11 @@
   <main class="product-box">
     <section class="product container">
       <a class="btn" href="index.html">Voltar</a>
+      <!-- <div class="spinner">
+        <svg>
+          <use href="src/img/icons.svg#icon-loader"></use>
+        </svg>
+      </div>  -->
       <!-- <div class="product__content" data-opt="">
         <div class="content__box-img">
           <img class="content__img" src="src/img/produtos/prod1.jpg" alt="">
@@ -77,7 +82,10 @@
           </p>
         </div>
       </div> -->
+
     </section>
+
+
   </main>
 </body>
 
